--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+#sudo apt install libsdl2-image-dev
 #git clone https://github.com/assimp/assimp.git
 #cd assimp
 #cmake ./
@@ -7,7 +8,7 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(anim)
 set (CMAKE_CXX_STANDARD 11)
-set (CMAKE_CXX_STANDARD_LIBRARIES "-lSDL2 -lSDL2main -lGL -ldl -I/usr/include/SDL2/")
+set (CMAKE_CXX_STANDARD_LIBRARIES "-lSDL2 -lSDL2main -lSDL2_image -lGL -ldl -I/usr/include/SDL2/")
 
 include_directories(glad)
 add_subdirectory(glm)
